# mepa-rs

./: .gitignore  Cargo.toml  readme.md
extras/: mepa-rs-mimetype.xml  mepa-rs.desktop
output/: code.mepa  deadvar.mepa  indirecao.mepa  movimentacao.mepa  sample.mepa
samples/: code.clite  code.txt  ex5.mepa  indirecao.cl  movimentacao.cl  teste.ipt
samples/ipt/: acesso-aleatorio.ipt  deadvar.ipt  inner.ipt  lifetime.ipt  movimentacao.ipt  sample.ipt  simple.ipt  sort-copy.ipt  sort.ipt  test.ipt
samples/ipt/algoritmos/: binary_search.ipt  bubble_sort.ipt  decimal_to_binary.ipt  euler_spigot.ipt  fibonacci.ipt  floyd_warshall.ipt  merge_sort.ipt  quicksort.ipt  rng.ipt  tower_of_hanoi.ipt
samples/ipt/elementares/: cod-morto.ipt  copia.ipt  global-var.ipt  test.ipt
samples/mepa/: recursao.mepa  sort.mepa
src/: lib.rs  main.rs
src/compiler/: compiler.rs  error.rs  gramatica.md  gramatica.txt  lexic.rs  mod.rs  readme.md  simbol_table.rs
src/evaluator/: mod.rs
src/machine/: basic_machine.rs  full_machine.rs  mod.rs  readme.md  wasm_machine.rs
src/mepa/: code.rs  error.rs  instruction.rs  label.rs  machine.rs  mod.rs  utills.rs
src/otimizador/: etapas.rs  grafo.rs  mod.rs  otimizador.rs  pre_processamento.rs  readme.md  var_mapping.rs
src/otimizador/genetico/: algoritmo.rs  mod.rs
src/utils/: mod.rs
