[package]
name = "mepa-rs"
version = "0.1.0"
edition = "2021"
authors = ["Tito Guidotti <tito.guidotti@gmail.com>"]
repository = "https://github.com/titoco3000/mepa-rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
petgraph = "0.6.5"
urlencoding = "2.1.3"
wasm-bindgen = "0.2.95"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"


# These dependencies are ONLY for native (non-WASM) builds
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { version = "4.5.20", features = ["derive"] }
open = "5.3.2"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(wasm_bindgen_unstable_test_coverage)'] }